Add new task-update interface to make name/status modification optional on task content update
