# src/resources/task/task.interface.ts
@@ -4,3 +4,8 @@ export interface ITaskPayload {
   name: string;
   status?: TaskStatusType;
 }
+
+export interface ITaskUpdatePayload {
+  name?: string;
+  status?: TaskStatusType;
+}
